--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ POSTGRES_DB = financial
 
 
 AIRFLOW_USER = airflow
-AIRFLOW_PASSWORD = A7bJ4hQ2
+AIRFLOW_PASSWORD = airflow
 AIRFLOW_DB = db_airflow
 AIRFLOW_WEBSERVER_SECRET_KEY = pZ5cR1m9
