--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,22 @@
 x-airflow-common:
   &airflow-common
-  image: apache/airflow:2.8.1
+  image: apache/airflow:2.9.1
   environment:
     &airflow-common-env 
     AIRFLOW__CORE__EXECUTOR: LocalExecutor
-    AIRFLOW__DATABASE__ALCHEMY_CONN: "postgresql+psycopg2://${AIRFLOW_USER}:${AIRFLOW_PASSWORD}@AIRFLOW/${AIRFLOW_DB}"
+    AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: "postgresql+psycopg2://${AIRFLOW_USER}:${AIRFLOW_PASSWORD}@172.19.0.2:5432/${AIRFLOW_DB}"
     AIRFLOW__CORE_DAGS_ARE_PAUSED_AT_CREATION: 'true'
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth'
     _PIP_ADDITIONAL_REQUIREMENTS: ""
   volumes:
-    - ./dags:/opt/airflow/dags
-    - ./logs:/opt/airflow/logs
-    - ./plugins:/opt/airflow/plugins
-  user: "$0:0"
-  depends_on:
-    - postgres
-    - airflow_postgres
+    - ./airflow/dags:/opt/airflow/dags
+    - ./airflow/logs:/opt/airflow/logs
+    - ./airflow/plugins:/opt/airflow/plugins
+  user: "0:0"
+  networks:
+    - red-financial
+    
+
 
 
 services:
@@ -23,30 +24,18 @@ services:
     container_name: postgres
     image: postgres:latest
     ports:
-      - "5433:5432"
+      - "5432:5432"
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - pg_data:/var/lib/postgresql/
+      - pg_data:/var/lib/postgresql
+      - ./airflow/script/create_airflow_db.sql:/docker-entrypoint-initdb.d/create_airflow_db.sql
     restart: always
     networks:
       - red-financial
 
-  postgres:
-    container_name: airflow-postgres
-    image: postgres:latest
-    ports:
-      - "5434:5432"
-    environment:
-      POSTGRES_USER: ${AIRFLOW_USER}
-      POSTGRES_PASSWORD: ${AIRFLOW_PASSWORD}
-      POSTGRES_DB: ${AIRFLOW_DB}
-    volumes:
-      - postgres-db-volume:/var/lib/postgresql/data
-    networks:
-      - red-financial
 
   pgloader:
     image: dimitri/pgloader
@@ -65,6 +54,46 @@ services:
         pgloader /data/creacion.load
     networks:
       - red-financial
+
+  airflow-webserver:
+    <<: *airflow-common
+    command: webserver
+    ports:
+      - "8080:8080"
+    healthcheck:
+      test: ["CMD", "curl", "--fail", "http://localhost:8080/health"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
+    depends_on:
+      - airflow-init
+      - airflow-scheduler
+      - postgres
+
+  airflow-scheduler:
+    <<: *airflow-common
+    command: scheduler
+    depends_on:
+      - airflow-init
+
+  airflow-init:
+    <<: *airflow-common
+    entrypoint: 
+      - bash
+      - -c 
+      - |
+        sleep 15
+        airflow db migrate && airflow users create \
+          --username airflow \
+          --password airflow \
+          --firstname Dani \
+          --lastname Amador \
+          --role Admin \
+          --email amadordana125@gmail.com
+    depends_on:
+      - postgres
+
+
 
 volumes:
   pg_data:
